<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center">
	
    
    <com.google.ads.AdView 
    				xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    				 android:id="@+id/adView"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     ads:adUnitId="ca-app-pub-8318354277210047/7175504612"
                     ads:adSize="BANNER"
					 ads:loadAdOnCreate="true"/>

    
	<LinearLayout
	
	android:layout_width="fill_parent"
	android:layout_height="50dp"
	android:orientation="horizontal"
	android:weightSum="23"
	android:background="@drawable/border"
	android:layout_marginBottom="10dp"
	android:gravity="center"
	>

	<TextView		
		android:id="@+id/day_name"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="5"
		android:textSize="15sp"
		android:textStyle="bold" 
		android:textColor="#000000"
		android:text="@string/day"
		android:gravity="center">
	</TextView>
		<TextView		
		android:id="@+id/hour_name"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="5"
		android:textSize="15sp"
		android:textStyle="bold" 
		android:textColor="#000000"
		android:text="@string/hour"
		android:gravity="center">
	</TextView>
		<TextView		
		android:id="@+id/dest_name"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="6"
		android:textSize="15sp"
		android:textStyle="bold" 
		android:textColor="#000000"
		android:text="@string/dest"
		 android:gravity="center">
	</TextView>
	<TextView		
		android:id="@+id/text_name"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="7"
		android:textSize="15sp"
		android:textStyle="bold" 
		android:textColor="#000000"
		android:text="@string/sms"
		android:gravity="center">
	</TextView>
</LinearLayout>
	
	<ListView
		android:id="@+id/productsLv"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:cacheColorHint="#00000000"
		android:dividerHeight="2dp"
	
	>
	    
	</ListView>
</LinearLayout>