<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/time_root"
        >
      
      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="370dp"
          android:orientation="vertical" 
          android:weightSum="34">

          <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_hour"
            android:textSize="20sp"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"
            android:textStyle="bold"
     		/>
          
          <TimePicker
              android:id="@+id/timePicker"
              android:layout_width="match_parent"
              android:layout_height="90dp"
              android:layout_weight="15" />

      	 <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_date"
            android:textSize="20sp"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="10dip"
            android:textStyle="bold"
     	 />
         
      	 <DatePicker
              android:id="@+id/datePicker"
              android:layout_width="match_parent"
              android:layout_height="180dp"
              android:layout_weight="18" />

      </LinearLayout>

      
             <LinearLayout android:orientation="horizontal"
           android:layout_width="fill_parent"
           android:gravity="center_horizontal" 
           android:layout_gravity="center_horizontal"
           android:layout_height="100dp">
       	 
	       
	        <Button
	            android:background="@drawable/custom_notify_btn"
	            android:textColor="@color/white_clr"
	          	android:id="@+id/set_sms_button"
	            android:layout_height="65dp"
	            android:text="@string/set_sms"
	            android:layout_marginTop="15dip"
	            android:layout_width="130dip"
	            android:textSize="20sp"
	            
            	android:textStyle="bold"
            	android:onClick="setMessage">
	        </Button>
	        
	        
		</LinearLayout>

</LinearLayout>


