<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    		  xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    		  xmlns:app="http://schemas.android.com/apk/res/com.example.smssked"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/root"
        android:gravity="center">
        
        
         <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/destinatario"
            android:textSize="20sp"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="25dip"
            android:textStyle="bold"
            android:gravity="center_horizontal"
     />
  <LinearLayout
   android:orientation="horizontal" 
   android:layout_height="wrap_content"  
   android:layout_width="match_parent"
   android:gravity="center"  >

      
      <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            >

            <requestFocus />
       </EditText>

     <ImageButton  
       android:layout_width="80dp"  
       android:layout_height="50dp"  
       android:id="@+id/phone_picker"  
       android:src="@drawable/contact"
       android:layout_marginLeft="10dp"
       android:onClick="doLaunchContactPicker">
    </ImageButton>  
    
</LinearLayout>      
       <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/testo_sms"
            android:textSize="20sp"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="25dip"
            android:textStyle="bold"
            android:gravity="center_horizontal"
      />
       
       
       <EditText
           android:id="@+id/textMessagge"
           android:gravity="top" 
           android:padding="4.0dip" 
           android:layout_width="fill_parent" 
           android:layout_height="0dp" 
           android:layout_margin="10.0px" 
           android:hint="Inserisci messaggio..." 
           android:inputType="textMultiLine"
           android:layout_weight="1.0" />

	       <LinearLayout android:orientation="vertical"
           android:layout_width="fill_parent"
           android:gravity="center_horizontal" 
           android:layout_gravity="center_horizontal"
           android:layout_height="wrap_content">
       	   
<com.google.ads.AdView 
    				xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    				 android:id="@+id/adView"
                     android:layout_width="fill_parent"
                     android:layout_height="60dp"
                     ads:adUnitId="ca-app-pub-8318354277210047/6418625015"
                     ads:adSize="BANNER"
					 ads:loadAdOnCreate="true"/>
       </LinearLayout>
       
       <LinearLayout android:orientation="horizontal"
           android:layout_width="fill_parent"
           android:gravity="center_horizontal" 
           android:layout_gravity="center_horizontal"
           android:layout_height="100dp">
       	 
	       
	        <Button
	            android:background="@drawable/custom_notify_btn"
	            android:textColor="@color/white_clr"
	            android:id="@+id/next_button"
	            android:layout_height="65dp"
	            android:text="@string/set_date"
	            android:layout_marginTop="15dip"
	            android:layout_width="130dip"
	            android:textSize="20sp"
	            
            	android:textStyle="bold"
            	android:onClick="setSmsObject">
	        </Button>
	        
          <Button
              android:layout_marginLeft="5dip"
              android:background="@drawable/custom_notify_btn"
              android:id="@+id/show_button_main"
              android:layout_width="130dip"
              android:layout_height="65dp"
              android:textSize="20sp"
              android:textColor="@color/white_clr"
              android:layout_marginTop="15dip"
              android:text="@string/show_sms" 
              android:textStyle="bold"
          	  android:onClick="showMessage">
	        </Button>
	        

	        
      
		</LinearLayout>

</LinearLayout>


